--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="theme-color" content="#222">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/thinking.svg">
     <link href="https://fonts.googleapis.com/css?family=Abel|Amatic+SC|Exo:500|Josefin+Slab|Nova+Square|Orbitron" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
     <!--
@@ -16,10 +16,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Coder's Journal</title>
   </head>
+
   <body>
+
     <div id="root"></div>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -31,4 +34,5 @@
       To create a production bundle, use `npm run build`.
     -->
   </body>
+
 </html>
